# lab

./: .gitignore  .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: docs.yml
ansible/: index.html  single-debian.yml  user-setup.yml
ansible/deploy/: compose-playbook.yml  docker-hub.yml  fluentbit.yml  install-tools.yml  setup_env.yml  single-debian.yml
ansible/maintenance/: db-backup.yml  restore-backup.yml  s3-backups-vars-sample.json
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/apple_users/: authentication.py  views.py
backend/drf_logging/: middleware.py
backend/project/: settings.py  urls.py
bruno/: Verify Apple Auth.bru  bruno.json
commands/: index.html
docker/: docker-compose.yml  fluent-bit.conf  fluentbit-backend.conf  grafana.yml  opensearch.yml  prometheus.yml
docker/drf/: Dockerfile  docker-compose.yml
docker/observability/: loki-config.yaml
docs/: README.md  index.md
docs/about/: README.md
docs/ansible/: README.md
docs/backend-development/: README.md
docs/commands/: README.md
docs/drf/: README.md
docs/frontend-development/: README.md
docs/getting-started/: README.md
docs/infra/: README.md
docs/js/: loader.js
docs/k8s/: README.md
docs/kind/: README.md
drf/: .dockerignore  Dockerfile  index.html  pyproject.toml
drf/apple_users/: apps.py  authentication.py  models.py  views.py
drf/apple_users/migrations/: 0001_initial.py
drf/drf_extras/: middleware.py
drf/drf_github/: apps.py  serializers.py  urls.py  views.py
drf/drf_user_profile/: apps.py  serializers.py  urls.py  views.py
drf/project/: settings-compose.py  settings.py  urls.py
expo/: .gitignore  app.json  eas.json  index.html  package-lock.json  package.json
frontend/: .gitignore  app.json  ctx.tsx  package-lock.json  package.json
infra/: cloudflare_tunnel.tf  iam.tf  index.html  outputs.tf  providers.tf  s3.tf
js/: loader.js
k8s/: cilium-kind-values.yml  dashboard-lb-service.yml  external-dns-manifest.yml  index.html  metallb.yml  test-service.yml
kind/: index.html
krakend/: krakend.json
links/: index.html
network/: index.html
observability/: index.html
scripts/: k8s-multiprotocol-test.sh  verify_apple_jwt.py
search/: search_index.json
(+64 files in other folders)
