[project]
name = "my-mobile-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Christian Lowe", email = "ireallywanttobespammed@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = "^3.10"

[tool.poetry.dependencies]
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-filter = "^24.3"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
